[project]
name = "langgraph-agent"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.13"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "langchain (>=1.0.5,<2.0.0)",
    "langgraph (>=1.0.3,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain-google-genai (>=4.0.0,<5.0.0)",
    "langgraph-checkpoint-sqlite (>=3.0.0,<4.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langgraph-prebuilt (>=1.0.4,<2.0.0)",
    "google-cloud-bigquery (>=3.38.0,<4.0.0)",
    "streamlit>=1.59.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/langgraph_agent"]

[tool.hatch.build.targets.wheel]
include = ["src/langgraph_agent"]

[tool.hatch.build.targets.wheel.sources]
"src/langgraph_agent" = "langgraph_agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: mark test as using live APIs (deselect with '-m \"not live\"')",
    "slow: mark test as slow running",
]
